# Onyx

./: .gitignore  LICENSE  README.md  benchmark_cuda_decode_loop.py  benchmark_cuda_grammar_handoff.py  benchmark_cuda_masked_argmax.py  benchmark_ffi.py  benchmark_rust_valid_token_index.py  probe_cuda_kv_cache.py  probe_cuda_real_logits.py  probe_cuda_target_generation.py  probe_cuda_tokenizer.py  pyproject.toml  run_adaptive_speculative.py  run_baseline.py  run_grammar.py  run_speculative.py  run_speculative_grammar.py  test_api.py  test_grammar_logic.py  whitepaper.md
examples/: cuda_nested_status_schema.json  cuda_status_schema.json  cuda_two_integer_array_schema.json  json_generate.py
onyx/: __init__.py  adaptive.py  adaptive_controller.py  cache.py  engine.py  evaluator.py  server.py  speculative.py  tokenizer_compat.py
onyx_cuda/: .gitignore  README.md  __init__.py  decode_loop.py  grammar_handoff.py  kv_cache_probe.py  masked_argmax.py  pyproject.toml  real_logits_handoff.py  target_generation.py  tokenizer_probe.py
onyx_cuda/csrc/: masked_argmax.cpp  masked_argmax_kernel.cu
onyx_cuda/docs/: technical_reference.md
onyx_cuda/rust/: .gitignore  Cargo.toml
onyx_cuda/rust/src/: json_parser.rs  json_runtime.rs  json_schema.rs  lib.rs  regex_runtime.rs
onyx_cuda/src/onyx_cuda/: __init__.py  _torch_install.py  acceptance.py  backend.py  cache.py  candidate_qualification.py  constrained_generation.py  draft.py  generation.py  grammar.py  hardware.py  identity.py  metrics.py  model_profile.py  native_grammar.py  native_json.py  native_regex.py  production_engine.py  production_tokenizer.py  qwen_grammar_vocabulary.py  selection.py  speculative_iteration.py  stop_sequences.py  streaming.py  target_model.py  testing.py  text_engine.py  tokenizer.py  torch_backend.py  torch_dynamic_cache.py  torch_grammar_mask.py  torch_metrics.py  torch_runtime.py  torch_selection.py  verification.py
onyx_cuda/tests/: inspect_native_distribution.py  installed_wheel_constrained_smoke.py  installed_wheel_json_smoke.py  installed_wheel_regex_smoke.py  json_parity_fixtures.py  qualify_cuda_grammar_mask.py  qualify_d24_constrained_generation.py  qualify_d25_constrained_streaming.py  qualify_d26_grammar_timing.py  qualify_d29_dynamic_cache_rollback.py  qualify_d31_batched_target_verification.py  qualify_d34_production_draft_proposal.py  qualify_qwen_grammar_vocabulary.py  regex_parity_fixtures.py  test_backend_contract.py  test_batched_target_verification.py  test_cache_checkpoint.py  test_candidate_qualification.py  test_constrained_generation.py  test_constrained_streaming.py  test_constrained_text_engine.py  test_draft_proposal.py  test_generation.py  test_grammar_contract.py  test_grammar_timing.py  test_hardware.py  test_json_parity_fixtures.py  test_match_replace_acceptance.py  test_metrics.py  test_native_build_boundary.py  test_native_grammar.py  test_native_json.py  test_native_regex.py  test_package_boundary.py  test_production_engine.py  test_production_tokenizer.py  test_qwen_grammar_vocabulary.py  test_selection.py  test_speculative_iteration.py  test_streaming.py  (+9 more)
rust/: Cargo.toml
rust/src/: constraint.rs  grammar.rs  json_engine.rs  lib.rs  regex_engine.rs  schema.rs  token_index.rs
tests/: __init__.py  kitchen_sink_test.py  test_adaptive_gamma.py  test_basic.py  test_compile_metrics.py  test_cuda_decode_loop.py  test_cuda_dependency_contract.py  test_cuda_grammar_handoff.py  test_cuda_kv_cache_probe.py  test_cuda_masked_argmax.py  test_cuda_real_logits_handoff.py  test_cuda_target_generation.py  test_cuda_tokenizer_probe.py  test_evaluator.py  test_grammar_state_handles.py  test_rust_valid_token_index.py  test_server_prompt_formatting.py  test_tokenizer_compat.py
