[build-system]
requires = ["maturin>=1.14,<2"]
build-backend = "maturin"

[project]
name = "onyx-cuda"
version = "0.1.0.dev0"
description = "Onyx for Windows: grammar-aware speculative decoding on NVIDIA CUDA"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Onyx Team" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
cuda = [
    "accelerate==1.14.0",
    "bitsandbytes==0.49.2",
    "huggingface-hub==0.36.2",
    "psutil==7.2.2",
    "tokenizers==0.22.2",
    "torch==2.6.0+cu124",
    "transformers==4.57.6",
]
dev = [
    "maturin>=1.14,<2",
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.maturin]
bindings = "pyo3"
features = ["extension-module"]
manifest-path = "rust/Cargo.toml"
module-name = "onyx_cuda._grammar_native"
python-source = "src"
exclude = [
    "local markdowns/**",
    "local_markdowns/**",
    "cuda_support_roadmap.md",
    "codebase_review_notes.md",
    "cuda_backend_selection.md",
    "windows_grammar_boundary.md",
    "**/cuda_support_roadmap.md",
    "**/codebase_review_notes.md",
    "**/cuda_backend_selection.md",
    "**/windows_grammar_boundary.md",
    "d22_implementation_plan.md",
    "d23_implementation_plan.md",
    "**/d*_implementation_plan.md",
    "rust/.gitignore",
    "src/**/__pycache__/**",
    "src/**/*.pyc",
    "src/**/*.pyo",
    "src/**/*.pyd",
]

[tool.maturin.sbom]
# cargo-cyclonedx root component references contain absolute local build paths.
rust = false

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
