[package]
name = "onyx_rust"
version = "0.1.0"
edition = "2021"
authors = ["Onyx Team"]
description = "High-performance grammar constraint engine for Onyx"
license = "MIT"

[lib]
name = "_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
regex = "1"
regex-automata = { version = "0.4", features = ["dfa", "dfa-build", "dfa-search", "syntax"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
