[package]
name = "onyx_cuda_grammar_native"
version = "0.1.0"
edition = "2021"
authors = ["Onyx Team"]
description = "Independent Windows native grammar boundary for Onyx CUDA"
license = "MIT"
repository = "https://github.com/bayareahomelander/Onyx"

[lib]
name = "_grammar_native"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.22" }
regex-automata = { version = "0.4", default-features = false, features = ["dfa", "dfa-build", "dfa-search", "syntax"] }
serde_json = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("gil-refs"))'] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
